src/test/deca/context/invalid/FloateqNull.deca
// Description:
//    float = null
//
// Resultats:
//    Assignment Error
//
// Historique:
//    cree le 08/01/2023

{
	
	float a = null	
}
